--- a/.github/workflows/grok-analysis.yml
+++ b/.github/workflows/grok-analysis.yml
@@ -1,37 +1,85 @@
-name: Grok Code Review               # This is just the name you will see
+name: Grok Code Review
 
-on:                                  # When should this run?
-  pull_request:                      # Every time a Pull Request is opened or updated
+on:
+  pull_request:
 
 jobs:
   review:
-    runs-on: ubuntu-latest           # GitHub will use a fresh Linux computer
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4      # Downloads your code so Grok can see it
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 3  # Increased to 3 for deeper history in case of complex diffs
+
+    - name: Verify checkout
+      run: |
+        if [ ! -f README.md ] || ! git rev-parse HEAD~1 >/dev/null 2>&1; then
+          echo "Checkout or history verification failed - repository may be empty or access denied."
+          exit 1
+        fi
+
+    - name: Fetch base branch
+      run: git fetch origin ${{ github.base_ref }}:${{ github.base_ref }} || echo "Base branch fetch failed - proceeding with available history"
 
     - name: Install Python tools
-      run: pip install xai-sdk      # Installs the official xAI library
+      run: pip install xai-sdk
 
-    - name: Ask Grok to review the changes
+    - name: Generate Grok review
+      id: generate-review
       env:
-        GROK_API_KEY: ${{ secrets.GROK_API_KEY }}   # Gets your secret key safely
+        GROK_API_KEY: ${{ secrets.GROK_API_KEY }}
       run: |
         python - <<EOF
         import os
+        import subprocess
         from xai_sdk import Client
 
-        client = Client(api_key=os.getenv("GROK_API_KEY"))
-        diff = "$(git diff HEAD~1)"   # Gets the code changes
+        api_key = os.getenv("GROK_API_KEY")
+        if not api_key:
+            review = "Error: GROK_API_KEY secret is not set in repository settings. Please add it for code reviews."
+        else:
+            # Check commit count to handle initial commits
+            commit_count = int(subprocess.check_output(['git', 'rev-list', '--count', 'HEAD']).decode('utf-8').strip())
+            try:
+                if commit_count <= 1:
+                    # Diff against empty tree for initial commit
+                    empty_tree = subprocess.check_output(['git', 'hash-object', '-t', 'tree', '/dev/null']).decode('utf-8').strip()
+                    diff = subprocess.check_output(['git', 'diff', empty_tree]).decode('utf-8')
+                else:
+                    diff = subprocess.check_output(['git', 'diff', 'HEAD~1']).decode('utf-8')
+            except subprocess.CalledProcessError:
+                try:
+                    diff = subprocess.check_output(['git', 'diff', '${{ github.base_ref }}']).decode('utf-8')
+                except subprocess.CalledProcessError:
+                    diff = "No previous commits available (possibly initial commit or shallow clone) - reviewing the current state of the branch. For better reviews, ensure multiple commits or deeper fetch."
+            if not diff.strip():
+                diff = "No changes detected - please verify the pull request has code differences."
 
-        response = client.chat.completions.create(
-            model="grok-4",
-            messages=[{
-                "role": "user",
-                "content": f"Please review these code changes and suggest improvements:\n\n{diff}"
-            }]
-        )
-        print("### Grok Code Review")
-        print(response.choices[0].message.content)
+            client = Client(api_key=api_key)
+            response = client.chat.completions.create(
+                model="grok-4",
+                messages=[{
+                    "role": "user",
+                    "content": f"Please review these code changes and suggest improvements:\n\n{diff}"
+                }]
+            )
+            review = response.choices[0].message.content
+
+        with open('grok_review.md', 'w') as f:
+            f.write("### Grok Code Review\n" + review)
         EOF
+
+    - name: Post review as PR comment
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const fs = require('fs');
+          const review = fs.readFileSync('grok_review.md', 'utf8');
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: review
+          });
