--- a/.github/workflows/grok-analysis.yml
+++ b/.github/workflows/grok-analysis.yml
@@ -21,12 +21,13 @@ jobs:
         fi
 
     - name: Fetch base branch
-      run: git fetch origin main:main || echo "Base branch fetch failed - proceeding with available history"
+      run: git fetch origin ${{ github.base_ref }}:${{ github.base_ref }} || echo "Base branch fetch failed - proceeding with available history"
 
     - name: Install Python tools
       run: pip install xai-sdk
 
-    - name: Ask Grok to review the changes
+    - name: Generate Grok review
+      id: generate-review
       env:
         GROK_API_KEY: ${{ secrets.GROK_API_KEY }}
       run: |
@@ -56,3 +57,16 @@ jobs:
         print("### Grok Code Review")
         print(response.choices[0].message.content)
         EOF
+
+    - name: Post review as PR comment
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const fs = require('fs');
+          const review = fs.readFileSync('grok_review.md', 'utf8');
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: review
+          });
