--- a/.github/workflows/grok-analysis.yml
+++ b/.github/workflows/grok-analysis.yml
@@ -24,7 +24,7 @@ jobs:
       run: git fetch origin ${{ github.base_ref }}:${{ github.base_ref }} || echo "Base branch fetch failed - proceeding with available history"
 
     - name: Install Python tools
-      run: pip install openai  # Use OpenAI SDK for xAI compatibility (switched from xai-sdk to resolve AttributeError)
+      run: pip install openai  # Use OpenAI SDK for xAI compatibility
 
     - name: Generate Grok review
       id: generate-review
@@ -40,45 +40,50 @@ jobs:
         import subprocess
         from openai import OpenAI
 
+        def get_diff():
+            """Generate diff with fallbacks for empty/shallow repos."""
+            try:
+                commit_count = int(subprocess.check_output(['git', 'rev-list', '--count', 'HEAD']).decode('utf-8').strip())
+                if commit_count <= 1:
+                    empty_tree = subprocess.check_output(['git', 'hash-object', '-t', 'tree', '/dev/null']).decode('utf-8').strip()
+                    return subprocess.check_output(['git', 'diff', empty_tree]).decode('utf-8')
+                else:
+                    return subprocess.check_output(['git', 'diff', 'HEAD~1']).decode('utf-8')
+            except subprocess.CalledProcessError as e:
+                print(f"Diff failed: {str(e)} - falling back.")
+                try:
+                    return subprocess.check_output(['git', 'diff', '${{ github.base_ref }}']).decode('utf-8')
+                except subprocess.CalledProcessError as e2:
+                    print(f"Fallback diff failed: {str(e2)}")
+                    return "No previous commits available - reviewing current state."
+
+        def call_grok_api(client, model, diff, max_tokens, temperature):
+            """Call Grok API for review."""
+            try:
+                response = client.chat.completions.create(
+                    model=model,
+                    messages=[{"role": "user", "content": f"Please review these code changes and suggest improvements:\n\n{diff}"}],
+                    max_tokens=max_tokens,
+                    temperature=temperature
+                )
+                return response.choices[0].message.content
+            except Exception as e:
+                return f"API call failed: {str(e)}. Check API key, network, or model availability."
+
         api_key = os.getenv("GROK_API_KEY")
         model = os.getenv("MODEL_NAME", "grok-beta")
         base_url = os.getenv("BASE_URL", "https://api.x.ai/v1")
         max_tokens = int(os.getenv("MAX_TOKENS", 500))
         temperature = float(os.getenv("TEMPERATURE", 0.7))
+
         if not api_key:
             review = "Error: GROK_API_KEY secret is not set in repository settings. Please add it for code reviews."
         else:
             client = OpenAI(base_url=base_url, api_key=api_key)
-            commit_count = int(subprocess.check_output(['git', 'rev-list', '--count', 'HEAD']).decode('utf-8').strip())
-            try:
-                if commit_count <= 1:
-                    empty_tree = subprocess.check_output(['git', 'hash-object', '-t', 'tree', '/dev/null']).decode('utf-8').strip()
-                    diff = subprocess.check_output(['git', 'diff', empty_tree]).decode('utf-8')
-                else:
-                    diff = subprocess.check_output(['git', 'diff', 'HEAD~1']).decode('utf-8')
-            except subprocess.CalledProcessError as e:
-                print(f"Diff failed: {str(e)} - falling back.")  # Logging for failures
-                try:
-                    diff = subprocess.check_output(['git', 'diff', '${{ github.base_ref }}']).decode('utf-8')
-                except subprocess.CalledProcessError as e2:
-                    print(f"Fallback diff failed: {str(e2)}")
-                    diff = "No previous commits available - reviewing current state."
+            diff = get_diff()
             if not diff.strip():
                 diff = "No changes detected."
-
-            try:
-                response = client.chat.completions.create(
-                    model=model,
-                    messages=[{
-                        "role": "user",
-                        "content": f"Please review these code changes and suggest improvements:\n\n{diff}"
-                    }],
-                    max_tokens=max_tokens,
-                    temperature=temperature
-                )
-                review = response.choices[0].message.content
-            except Exception as e:
-                review = f"API call failed: {str(e)}. Check API key, network, or model availability."
+            review = call_grok_api(client, model, diff, max_tokens, temperature)
 
         with open('grok_review.md', 'w') as f:
             f.write("### Grok Code Review\n" + review)
